# ============================================================================
# src/ — all Firelands source code
# ============================================================================

# Shared libraries
add_subdirectory(common)

# Server executables
add_subdirectory(server)

# Uncomment as these are implemented:
# add_subdirectory(game)
# add_subdirectory(tools)
