# ============================================================================
# Fireland — Unit tests (Boost.Test)
# ============================================================================

# Ajout des sous-dossiers de tests
add_subdirectory(Utils)
add_subdirectory(Crypto)
add_subdirectory(Network)
add_subdirectory(Database)

enable_testing()
